max to min-width done

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <nav class="bg_yellow position_sticky height_100">
         <div class="container ">
             <div class="d_flex js_space_between align_center padding_top_bottom4">
-                <img class="z_index "  src="./aasets/img/png/navlogo.png" alt="">
+                <img class="z_index " src="./aasets/img/png/navlogo.png" alt="">
                 <label for="checkbox">
                     <span></span>
                     <span></span>
                     <span></span>
                 </label>
                 <input type="checkbox" id="checkbox" hidden>
-                <div class="nav_hide">
+                <div class="nav_hide nav_show">
                     <a class="margin_right1 fw-600 fs-18 ff-poppins color_red " href="">Home</a>
                     <a class="margin_right1  fw-600 fs-18 ff-poppins color_black" href="">About Us</a>
                     <a class="margin_right1 fw-600 fs-18 ff-poppins color_black" href="">Tokenomics</a>
@@ -45,8 +45,8 @@
                 <div class="container">
                     <div class="d_flex flex_direction_column js_center align_center">
                         <h1 class="ff-poppins fs-36 fw-700 margin_top_bottom">WELCOME TO</h1>
-                        <img class="padding_bottom1 w_100_md  " src="./aasets/img/png/logo (1).png" alt="">
-                        <img class="logo_position logo_position_md" src="./aasets/img/png/Group 120.png" alt="">
+                        <img class="w_100 width_md_logo " src="./aasets/img/png/logo (1).png" alt="">
+                        <img class="w-40 img_transform" src="./aasets/img/png/Group 120.png" alt="">
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
         <div class="bg_color">
             <div class="container">
                 <div class="row">
-                    <div class="col_7 col_12_sm padding_top_bottom1">
+                    <div class="col_12 col_lg_7 margin_top_9">
                         <h1 class="ff-poppins fw-700 fs-45">It was popularised</h1>
                         <p class="ff-poppins fw-400 fs-18 padding_top_bottom">Have you heard? We’re hiring! We have
                             3,333 working positions to fill on the Solana blockchain. Once all positions are filled
@@ -66,8 +66,8 @@
                             of 1,666 mcnoots in total.</p>
                         <button class="ff-roboto fw-500 fs-21">DISCOVER MORE</button>
                     </div>
-                    <div class="col_5 col_12_sm">
-                        <img class="margin_top_md margin_top_sm" src="./aasets/img/png/main.png" width="100%" alt="">
+                    <div class="col_12 col_lg_5">
+                        <img class="margin_top_md margin_top_bottom0" src="./aasets/img/png/main.png" width="100%" alt="">
                     </div>
                 </div>
             </div>
@@ -76,41 +76,41 @@
     <section>
         <div class="bg_color2">
             <div class="container">
-                <div class="row paddin_left_right padding_top_bottom2 padding_top_bottom2_sm  flex_wrap">
-                    <div class="col_3 col_6_sm padding_bottom2">
+                <div class="row paddin_left_right padding_top_bottom2  ">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/1.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/2.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2 ">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/3.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/4.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/5.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/6.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/7.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2 ">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/8.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2 ">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/9.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2 ">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/10.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/11.png" alt="" class="w_100">
                     </div>
-                    <div class="col_3 col_6_sm padding_bottom2">
+                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/12.png" alt="" class="w_100">
                     </div>
                 </div>
@@ -123,13 +123,13 @@
                 <h1 class="d_flex js_center  ff-poppins fw-700 fs-48 color_white padding_top_bottom3">Supplies</h1>
                 <div class=" padding_bottom">
                     <div class="row">
-                        <div class="col_3 col_12_md">
+                        <div class="col_12 col_md_6 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column margin_top_md1">
                                 <h1 class=" ff-poppins fw-700 fs-48 color_white">3,313</h1>
                                 <p class="ff-poppins fw-400 fs-18 color_white">Public Sale</p>
                             </div>
                         </div>
-                        <div class=" col_3 col_12_md">
+                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
                                 <h1
                                     class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
@@ -137,7 +137,7 @@
                                 <p class="ff-poppins fw-400 fs-18 color_white">Community Giveaways</p>
                             </div>
                         </div>
-                        <div class=" col_3 col_12_md">
+                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
                                 <h1
                                     class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
@@ -145,7 +145,7 @@
                                 <p class="ff-poppins fw-400 fs-18 color_white">Marketing / Influencers</p>
                             </div>
                         </div>
-                        <div class=" col_3 col_12_md">
+                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
                                 <h1
                                     class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
@@ -169,7 +169,7 @@
             <img class="roadmap_burger6" src="./aasets/img/png/hamburger.png" alt="">
             <img class="roadmap_burger7" src="./aasets/img/png/hamburger.png" alt="">
             <img class="roadmap_burger8" src="./aasets/img/png/hamburger.png" alt="">
-            <div class="container">
+            <div class="container padding_bottom6">
                 <div class="timeline">
                     <div class="timelineContainer left">
                         <div class="content">
@@ -187,6 +187,7 @@
                             <h4 class="ff-poppins fs-24 fw-400">3. Secure Partnerships</h4>
                         </div>
                     </div>
+
                 </div>
                 <div class="timelineContainer left">
                     <div class="content">
@@ -204,22 +205,26 @@
             <div class="container">
                 <h1 class="d_flex js_center ff-poppins fw-700 fs-48 padding_top_bottom3 ">Team</h1>
                 <div class="row">
-                    <div class="col_3 col_6_sm d_flex flex_direction_column padding_bottom3  align_center js_center">
+                    <div
+                        class="col_12 col_md_6 col_lg_3 d_flex flex_direction_column padding_bottom3  align_center js_center">
                         <img src="./aasets/img/png/1.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
-                    <div class="col_3 col_6_sm  d_flex flex_direction_column padding_bottom3 align_center js_center">
+                    <div
+                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
                         <img src="./aasets/img/png/2.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
-                    <div class="col_3 col_6_sm  d_flex flex_direction_column padding_bottom3  align_center js_center  ">
+                    <div
+                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3  align_center js_center  ">
                         <img src="./aasets/img/png/3.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
-                    <div class="col_3 col_6_sm  d_flex flex_direction_column padding_bottom3 align_center js_center">
+                    <div
+                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
                         <img src="./aasets/img/png/4.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
@@ -233,37 +238,38 @@
             <div class="container">
                 <div class="d_flex align_center js_center flex_direction_column">
                     <h1 class=" ff-poppins fw-700 fs-48 padding_top_bottom3 ">FAQ</h1>
-                    <div class="box d_flex js_space_between input_width_md">
+                    <div class="box js_space_between accordian_width bg_color d_flex">
                         <h1 class="ff-poppins fw-600 fs-18">Amet vel eget nisi, sed ut massa turpis sodales nunc.</h1>
                         <svg width="29" height="17" viewBox="0 0 29 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <div class="box d_flex js_space_between input_width_md">
+                    <div class="box js_space_between accordian_width bg_color d_flex">
                         <h1 class="ff-poppins fw-600 fs-18">Amet vel eget nisi, sed ut massa turpis sodales nunc.</h1>
                         <svg width="29" height="17" viewBox="0 0 29 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <div class="box d_flex js_space_between input_width_md">
+                    <div class="box js_space_between accordian_width bg_color d_flex">
                         <h1 class="ff-poppins fw-600 fs-18">Amet vel eget nisi, sed ut massa turpis sodales nunc.</h1>
                         <svg width="29" height="17" viewBox="0 0 29 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <div class="box d_flex js_space_between input_width_md">
+                    <div class="box js_space_between accordian_width bg_color d_flex">
                         <h1 class="ff-poppins fw-600 fs-18">Amet vel eget nisi, sed ut massa turpis sodales nunc.</h1>
                         <svg width="29" height="17" viewBox="0 0 29 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <div class="box d_flex js_space_between input_width_md">
+                    <div class="box js_space_between accordian_width bg_color d_flex">
                         <h1 class="ff-poppins fw-600 fs-18">Amet vel eget nisi, sed ut massa turpis sodales nunc.</h1>
                         <svg width="29" height="17" viewBox="0 0 29 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <img class="padding_top_bottom6 w_100_xsm " src="./aasets/img/png/logofooter.png" alt="">
+                    <img class="padding_top_bottom6 w_100 width_footer_img " src="./aasets/img/png/logofooter.png"
+                        alt="">
                     <div class="d_flex ">
                         <img class="margin_right_left" src="./aasets/img/png/discord.png" alt="">
                         <img class="margin_right_left" src="./aasets/img/png/twitter.png" alt="">
