--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <span></span>
                 </label>
                 <input type="checkbox" id="checkbox" hidden>
-                <div class="nav_hide nav_show">
-                    <a class="margin_right1 fw-600 fs-18 ff-poppins color_red " href="">Home</a>
-                    <a class="margin_right1  fw-600 fs-18 ff-poppins color_black" href="">About Us</a>
-                    <a class="margin_right1 fw-600 fs-18 ff-poppins color_black" href="">Tokenomics</a>
-                    <a class="margin_right1 fw-600 fs-18 ff-poppins color_black" href="">Roadmap</a>
-                    <a class="margin_right1 fw-600 fs-18 ff-poppins color_black" href="">Contact</a>
-                    <a class="btn_connectwallet fw-600 fs-18 ff-poppins" href="">WALLET CONNECT</a>
+                <div class="nav_hide ">
+                    <a class="margin_right1 fw-500 fs-18 ff-poppins color_red " href="">Home</a>
+                    <a class="margin_right1  fw-500 fs-18 ff-poppins color_black" href="">About Us</a>
+                    <a class="margin_right1 fw-500 fs-18 ff-poppins color_black" href="">Tokenomics</a>
+                    <a class="margin_right1 fw-500 fs-18 ff-poppins color_black" href="">Roadmap</a>
+                    <a class="margin_right1 fw-500 fs-18 ff-poppins color_black" href="">Contact</a>
+                    <a class="btn_connectwallet fw-600 fs-18 ff-poppins" href="">CONNECT WALLET</a>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="bg_color">
             <div class="container">
                 <div class="row">
-                    <div class="col_12 col_lg_7 margin_top_9">
+                    <div class="col_12 col_md_7 margin_top_9 align_center js_center">
                         <h1 class="ff-poppins fw-700 fs-45">It was popularised</h1>
                         <p class="ff-poppins fw-400 fs-18 padding_top_bottom">Have you heard? We’re hiring! We have
                             3,333 working positions to fill on the Solana blockchain. Once all positions are filled
@@ -66,8 +66,8 @@
                             of 1,666 mcnoots in total.</p>
                         <button class="ff-roboto fw-500 fs-21">DISCOVER MORE</button>
                     </div>
-                    <div class="col_12 col_lg_5">
-                        <img class="margin_top_md margin_top_bottom0" src="./aasets/img/png/main.png" width="100%" alt="">
+                    <div class="col_12 col_md_5">
+                        <img class="margin_top_bottom0-lg margin_top_bottom0 " src="./aasets/img/png/main.png" width="100%" alt="">
                     </div>
                 </div>
             </div>
@@ -77,40 +77,40 @@
         <div class="bg_color2">
             <div class="container">
                 <div class="row paddin_left_right padding_top_bottom2  ">
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/1.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/2.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/3.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/4.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/5.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/6.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/7.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/8.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/9.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2 ">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2 ">
                         <img src="./aasets/img/png/10.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/11.png" alt="" class="w_100">
                     </div>
-                    <div class="col_12 col_md_6 col_lg_3 padding_bottom2">
+                    <div class="col_12 col_sm_6 col_md_4 col_lg_3 padding_bottom2">
                         <img src="./aasets/img/png/12.png" alt="" class="w_100">
                     </div>
                 </div>
@@ -123,13 +123,13 @@
                 <h1 class="d_flex js_center  ff-poppins fw-700 fs-48 color_white padding_top_bottom3">Supplies</h1>
                 <div class=" padding_bottom">
                     <div class="row">
-                        <div class="col_12 col_md_6 col_lg_3 margin_bottom4">
+                        <div class="col_12 col_sm_6 col_md_4 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column margin_top_md1">
                                 <h1 class=" ff-poppins fw-700 fs-48 color_white">3,313</h1>
                                 <p class="ff-poppins fw-400 fs-18 color_white">Public Sale</p>
                             </div>
                         </div>
-                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
+                        <div class=" col_12 col_sm_6 col_md_4 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
                                 <h1
                                     class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
@@ -137,7 +137,7 @@
                                 <p class="ff-poppins fw-400 fs-18 color_white">Community Giveaways</p>
                             </div>
                         </div>
-                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
+                        <div class=" col_12 col_sm_6 col_md_4 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
                                 <h1
                                     class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
@@ -145,11 +145,9 @@
                                 <p class="ff-poppins fw-400 fs-18 color_white">Marketing / Influencers</p>
                             </div>
                         </div>
-                        <div class=" col_12 col_md_6 col_lg_3 margin_bottom4">
+                        <div class=" col_12 col_sm_6 col_md_4 col_lg_3 margin_bottom4">
                             <div class="align_center d_flex js_center flex_direction_column">
-                                <h1
-                                    class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">
-                                    15</h1>
+                                <h1 class="align_center d_flex js_center ff-poppins fw-700 fs-48 color_white margin_top_md1">15</h1>
                                 <p class="ff-poppins fw-400 fs-18 color_white">Maximum Supply </p>
                             </div>
                         </div>
@@ -173,28 +171,28 @@
                 <div class="timeline">
                     <div class="timelineContainer left">
                         <div class="content">
-                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4">Q4 2021</h1>
-                            <h2 class="ff-poppins fs-24 fw-400">1. Launch SFFB</h2>
-                            <h3 class="ff-poppins fs-24 fw-400">2. SELL OUT</h3>
-                            <h4 class="ff-poppins fs-24 fw-400">3. Apply for secondary marketplace listings</h4>
+                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q4 2021</h1>
+                            <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Launch SFFB</h2>
+                            <h3 class="ff-poppins fs-24 fw-400  font-lg ">2. SELL OUT</h3>
+                            <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Apply for secondary marketplace listings</h4>
                         </div>
                     </div>
                     <div class="timelineContainer right">
                         <div class="content">
-                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4">Q1 2022</h1>
-                            <h2 class="ff-poppins fs-24 fw-400">1. Charity Giveaway</h2>
-                            <h3 class="ff-poppins fs-24 fw-400">2. Launch Adopt-A-Penguin Program</h3>
-                            <h4 class="ff-poppins fs-24 fw-400">3. Secure Partnerships</h4>
+                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
+                            <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Charity Giveaway</h2>
+                            <h3 class="ff-poppins fs-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
+                            <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Secure Partnerships</h4>
                         </div>
                     </div>
 
                 </div>
                 <div class="timelineContainer left">
                     <div class="content">
-                        <h1 class="fw-700 fs-24 ff-poppins padding_bottom4">Q1 2022</h1>
-                        <h2 class="ff-poppins fs-24 fw-400">1. Charity Giveaway</h2>
-                        <h3 class="ff-poppins fs-24 fw-400">2. Launch Adopt-A-Penguin Program</h3>
-                        <h4 class="ff-poppins fs-24 fw-400">3. Secure Partnerships</h4>
+                        <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
+                        <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Charity Giveaway</h2>
+                        <h3 class="ff-poppins fs-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
+                        <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Secure Partnerships</h4>
                     </div>
                 </div>
             </div>
@@ -206,25 +204,25 @@
                 <h1 class="d_flex js_center ff-poppins fw-700 fs-48 padding_top_bottom3 ">Team</h1>
                 <div class="row">
                     <div
-                        class="col_12 col_md_6 col_lg_3 d_flex flex_direction_column padding_bottom3  align_center js_center">
+                        class="col_12 col_sm_6 col_md_4 col_lg_3 d_flex flex_direction_column padding_bottom3  align_center js_center">
                         <img src="./aasets/img/png/1.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
                     <div
-                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
+                        class="col_12 col_sm_6 col_md_4 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
                         <img src="./aasets/img/png/2.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
                     <div
-                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3  align_center js_center  ">
+                        class="col_12 col_sm_6 col_md_4 col_lg_3  d_flex flex_direction_column padding_bottom3  align_center js_center  ">
                         <img src="./aasets/img/png/3.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
                     </div>
                     <div
-                        class="col_12 col_md_6 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
+                        class="col_12 col_sm_6 col_md_4 col_lg_3  d_flex flex_direction_column padding_bottom3 align_center js_center">
                         <img src="./aasets/img/png/4.png" alt="" class="w_100">
                         <h1 class="ff-poppins fw-700 fs-24 margin_top">Jhone Doe</h1>
                         <p class="ff-poppins fs-18 fw-400">Manager</p>
