footer img size fix

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="d_flex flex_direction_column js_center align_center">
                         <h1 class="ff-poppins fs-36 fw-700 margin_top_bottom">WELCOME TO</h1>
                         <img class="w_100 width_md_logo " src="./aasets/img/png/logo (1).png" alt="">
-                        <img class="w-40 img_transform" src="./aasets/img/png/Group 120.png" alt="">
+                        <img class="w-38 img_transform" src="./aasets/img/png/Group 120.png" alt="">
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
         <div class="bg_color">
             <div class="container">
                 <div class="row">
-                    <div class="col_12 col_md_7 margin_top_9 align_center js_center">
+                    <div class="col_12 col_md_7 margin_top_9 align_center js_center pd-bt-tp-md">
                         <h1 class="ff-poppins fw-700 fs-45">It was popularised</h1>
                         <p class="ff-poppins fw-400 fs-18 padding_top_bottom">Have you heard? We’re hiring! We have
                             3,333 working positions to fill on the Solana blockchain. Once all positions are filled
@@ -171,28 +171,28 @@
                 <div class="timeline">
                     <div class="timelineContainer left">
                         <div class="content">
-                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q4 2021</h1>
-                            <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Launch SFFB</h2>
-                            <h3 class="ff-poppins fs-24 fw-400  font-lg ">2. SELL OUT</h3>
-                            <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Apply for secondary marketplace listings</h4>
+                            <h1 class="fw-700 fs-15 fs-md-24 ff-poppins padding_bottom4 fontsize-lg">Q4 2021</h1>
+                            <h2 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">1. Launch SFFB</h2>
+                            <h3 class="ff-poppins fs-15 fs-md-24 fw-400  font-lg ">2. SELL OUT</h3>
+                            <h4 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">3. Apply for secondary marketplace listings</h4>
                         </div>
                     </div>
                     <div class="timelineContainer right">
                         <div class="content">
-                            <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
-                            <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Charity Giveaway</h2>
-                            <h3 class="ff-poppins fs-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
-                            <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Secure Partnerships</h4>
+                            <h1 class="fw-700 fs-15 fs-md-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
+                            <h2 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">1. Charity Giveaway</h2>
+                            <h3 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
+                            <h4 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">3. Secure Partnerships</h4>
                         </div>
                     </div>
 
                 </div>
                 <div class="timelineContainer left">
                     <div class="content">
-                        <h1 class="fw-700 fs-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
-                        <h2 class="ff-poppins fs-24 fw-400 font-lg">1. Charity Giveaway</h2>
-                        <h3 class="ff-poppins fs-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
-                        <h4 class="ff-poppins fs-24 fw-400 font-lg">3. Secure Partnerships</h4>
+                        <h1 class="fw-700 fs-15 fs-md-24 ff-poppins padding_bottom4 fontsize-lg">Q1 2022</h1>
+                        <h2 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">1. Charity Giveaway</h2>
+                        <h3 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">2. Launch Adopt-A-Penguin Program</h3>
+                        <h4 class="ff-poppins fs-15 fs-md-24 fw-400 font-lg">3. Secure Partnerships</h4>
                     </div>
                 </div>
             </div>
@@ -266,7 +266,7 @@
                             <path d="M2 15.5L14.5 3L27 15.5" stroke="black" stroke-width="3" />
                         </svg>
                     </div>
-                    <img class="padding_top_bottom6 w_100 width_footer_img " src="./aasets/img/png/logofooter.png"
+                    <img class="padding_top_bottom6 w_78 width_footer_img " src="./aasets/img/png/logofooter.png"
                         alt="">
                     <div class="d_flex ">
                         <img class="margin_right_left" src="./aasets/img/png/discord.png" alt="">
